chore: adding new message and complete validator

--- a/Resources/Messages.resx
+++ b/Resources/Messages.resx
@@ -120,6 +120,9 @@
   <data name="AccessDenied" xml:space="preserve">
     <value>Access Denied</value>
   </data>
+  <data name="AlreadyExists" xml:space="preserve">
+    <value>Already Exists</value>
+  </data>
   <data name="NotFound" xml:space="preserve">
     <value>Not Found</value>
   </data>
