--- a/Resources/Messages.resx
+++ b/Resources/Messages.resx
@@ -123,6 +123,9 @@
   <data name="AlreadyExists" xml:space="preserve">
     <value>Already Exists</value>
   </data>
+  <data name="MessageNotFound" xml:space="preserve">
+    <value>Message not found</value>
+  </data>
   <data name="NotFound" xml:space="preserve">
     <value>Not Found</value>
   </data>
